# Test_pypkg

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
Totty_pypkg/: Totty_pypkg.py
docs/: Makefile  make.bat
docs/source/: conf.py  index.md  installation.md  usage.ipynb
tests/: test_Totty_pypkg.py
