[tool.poetry]
name = "Totty_pypkg"
version = "0.1.0"
description = "Testing the obook"
authors = ["Michael Totty"]
license = "MIT"
readme = "README.md"
documentation = "https://Totty_pypkg.readthedocs.io/en/latest/"
homepage = "https://github.com/MicTott/Totty_pypkg"
repository = "https://github.com/MicTott/Totty_pypkg"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
