[tool.poetry]
name = "Totty_pypkg"
version = "0.1.0"
description = "Testing the obook"
authors = ["Michael Totty"]
license = "MIT"
readme = "README.md"
documentation = "https://Totty_pypkg.readthedocs.io/en/latest/"
homepage = "https://github.com/MicTott/Totty_pypkg"
repository = "https://github.com/MicTott/Totty_pypkg"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]
Sphinx = "^4.1.2"
nbsphinx = "^0.8.7"
ipykernel = "^6.2.0"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^0.5.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
